<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="info.androidhive.materialdesign.activity.FriendsFragment">


    <TextView
        android:id="@+id/label"
        android:layout_marginTop="64dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="35dp"
        android:text="@string/selec_producto"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_below="@id/label"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="Edit fragment_friends.xml to change the appearance"
        android:id="@+id/textView7" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/inPrecio"
        android:textAlignment="center"
        android:width="150dp"
        android:layout_alignTop="@+id/editText5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:enabled="true"
        android:editable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:id="@+id/textView8"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:labelFor="@id/inPrecio"
        android:layout_marginLeft="78dp"
        android:layout_marginStart="78dp"
        android:layout_above="@+id/editText5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_aceptar"
        android:id="@+id/button"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="25dp"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText5"
        android:textAlignment="center"
        android:width="100dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        android:id="@+id/textView10"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:labelFor="@id/inPrecio"
        android:layout_above="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_above="@+id/button"
        android:layout_marginBottom="38dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:id="@+id/textView9"
        android:layout_above="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp" />

</RelativeLayout>